change settings to Java 11